--- a/src/app/components/board/board/board.component.html
+++ b/src/app/components/board/board/board.component.html
@@ -1,3 +1,4 @@
+<button title="Move" (click)="moveSnake()">Move</button>
 <div class="board">
     <div *ngFor="let row of board" class="row">
         <div *ngFor="let col of row" class="cell" [ngClass]="getCellClass(col)">
