--- a/src/app/components/board/board/board.component.css
+++ b/src/app/components/board/board/board.component.css
@@ -4,6 +4,18 @@
     justify-content: center;
 }
 
+.title {
+    font-family: Symtext;
+    font-size: 40px;
+}
+
+.heading {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .board {
     outline: 2px solid rgb(134, 154, 189);
     margin-top: 20px;
@@ -32,4 +44,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+.control {
+    font-size: 40px;
 }
